--- a/L2.md
+++ b/L2.md
@@ -1,2 +1,22 @@
 # Stacking, and many to one virtualization 
+istack, stack-wise
 
+https://lenovopress.com/sg248245.pdf
+
+Stacking benefits:  
+- The ability to operate multiple switches as a unit from a management perspective, with a
+single configuration file and a single management address for access (including SNMP).
+- The ability to use ports from different physical switching elements as part of a single
+aggregation group.
+- Single FDB, ARP table
+
+limitations:  
+- When a stack is rebooted to activate new firmware or for any other reason, the entire stack
+(all of the switching elements) is rebooted at the same time. staggered upgrade
+- Stacking does not support local preference. This lack of support causes some traffic to be
+needlessly forwarded around the stack links to get to the port that is chosen by the
+hashing metric when links are aggregated. This process is in contrast to vLAG, which
+does support local preference.
+    - Some vendor can support local perference
+- Performance impact, when stack size more than 4 switches
+- Feature support limation, support less features than standalone switch, not support L3 routing.
